updating project